# jobhunt-pro-swarm

./: .antigravity_improvements.json  .clinerules-lite  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  10_10_COMPLETE.md  ANTIGRAVITY_STATE_SUMMARY.md  APEX_MATRIX_BLUEPRINT_V3.md  ARCHITECTURE_BLUEPRINT.md  AUTO_OPTIMIZATION_LOG.md  BROWSER_VISUAL_AUDIT.md  CLOUD_DEPLOY.md  CLOUD_DEPLOYMENT.md  CLOUD_DEPLOYMENT_PLAN.md  CONTRIBUTING.md  DEEP_AUDIT_REPORT.md  DEEP_SCAN_REPORT_V15.md  DEPLOY.md  DEPLOYMENT_AUDIT_REPORT.md  DOCKER_CONSOLIDATION.md  Dockerfile  Dockerfile.cloud  Dockerfile.frontend  Dockerfile.hf  ENHANCEMENTS_2026-07-15.md  ENHANCEMENTS_COMPLETE_FINAL.md  ENHANCEMENTS_PHASE_2.md  ENHANCEMENTS_QUICK_SUMMARY.md  ENTERPRISE_ARCHITECTURE_BLUEPRINT.md  EXIT_PITCH_DECK.md  FINAL_SYSTEM_BLUEPRINT.md  FIX_SUMMARY.md  HUGGINGFACE_DEPLOY_LEBANON.md  IMPROVEMENTS_EXECUTED_2026-07-15.md  IMPROVEMENTS_MASTER.md  IMPROVEMENTS_V4_MASTER.md  INDEX_ALL_ENHANCEMENTS.md  JOB_SOURCE_TEST_RESULTS.md  (+374 more)
.agents/: AGENTS.md  BRIEFING.md  ORIGINAL_REQUEST.md  get_modified.py  handoff.md  modified_files.txt  task.md
.continue/: config.yaml
.github/: pa_autorenew.py
00_ORGANIZED_STRUCTURE/: ORGANIZATION_GUIDE.md
_legacy/: .antigravity_improvements.json  _cloudflare_worker_code.js  _scan_services.py  _upload_to_pa.py  _upload_to_pa_v2.py  always_on_loop.py  audit_results_v3.json  auto_marketer.py  auto_pilot.py  auto_pilot_log.txt  campaign_error.txt  check_db.py  check_jobs.py  check_pa_logs.py  cloud_queue_worker.py  cloudflare_pages_index.html  cloudflare_worker_proxy.js  cloudscraper_collector.py  curl_pricing.html  curl_pricing_v2.html  data_broker_export.py  debug_bayt.html  deploy_oracle.sh  deploy_vm.sh  download_db.py  dump.html  exchange.html  fetch_pa_logs.py  fleek.json  freelance_swarm.py  generate_seo_job_board.py  ghost_agency.py  init_pa_tables.py  kill_consoles.py  lead_generator.py  live.html  migrate_to_neon.py  nodriver_collector.py  nodriver_jobs.json  orchestrator.py  (+24 more)
agents/: marketing_swarm.py
archive/: .gitignore_scripts  Dockerfile.frontend  Dockerfile.hf  Dockerfile.kronos  Dockerfile.swarm  _test_rss.xml  add_tokens.py  analyze_templates.py  audit_designs.py  audit_routing_wrapping.py  auto_design_fixer.py  babel.cfg  backend_readme.md  campaign_error.txt  check_bayt_content.py  check_bayt_search.py  check_db.py  check_deploy.py  check_pa_account.py  check_pa_tasks.py  check_triggers.py  clean_cache.py  clean_nested_templates.py  clean_pricing_css.py  cron_last_run.txt  deploy-pa.yml  deploy_eu_servers.sh  diff.txt  docker-compose.monitoring.yml  fetch_pa_access_logs.py  find_get_db.py  find_rita.py  find_sam_details.py  find_tenant_stats.py  fix_layout.py  fix_tier_id.py  fly.toml  get_routes.py  gha_log.txt  indeed_proxy_results.json  (+38 more)
backend/: __init__.py  ai_engine.py  auth.py  billing.py  cache.py  celery_app.py  config.py  database.py  email_engine.py  gh_auto_apply.py  limiter.py  main.py  models.py  multi_llm_router.py  og_card_generator.py  schemas.py  seed_translations.py  sync_worker.py  tasks.py  websocket.py  websocket_telemetry.py
backend-node/: package-lock.json  package.json  render.yaml  server.js
bot/: package-lock.json  package.json
candidate_profile/: candidate_1500plus_strategy.txt  candidate_email_preview.html  candidate_email_preview.txt  candidate_lebanese_companies_targets.csv
chrome-extension/: background.js  content.js  manifest.json  p2p_mesh_node.js  popup.html  popup.js  styles.css
chrome_extension/: auto_applier_v2.js  background.js  build.js  chatgpt-content.js  content.css  content.js  gmail-content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  scraper-content.js  shadow-content.js
cloudflare/: DEPLOY_GUIDE.md  d1_schema.sql  keep_alive.js  payment_queue_worker.js  uptime_pinger.js  worker.js  wrangler.toml
core/: __init__.py  aegis_protocol.py  aegis_shield.py  agent_graph.py  agent_pool.py  agent_rm.py  agentic_tailor.py  ai_cache.py  ai_conversation.py  ai_router.py  ai_tailor.py  ai_video_pitch.py  ai_voice_interviewer.py  analytics.py  anti_ban.py  api_response.py  async_db.py  ats_cracker.py  ats_heatmap_engine.py  ats_matcher.py  ats_penetration_engine.py  ats_scorer.py  ats_steganography.py  auth_utils.py  auto_applier_swarm_v2.py  auto_backup.py  auto_form_solver.py  auto_heal.py  auto_install.py  autonomous_seo_generator.py  autonomous_social_outreach.py  autopoiesis.py  autopoiesis_debugger.py  autopoietic_code_mutator.py  autopoietic_self_healing.py  autopoietic_universal_swarm.py  aws_proxy_router.py  b2b_lead_empire.py  ban_shield.py  bayt_scraper.py  (+242 more)
dashboard/: index.html  package-lock.json  package.json  server.js
deploy/: DEPLOYMENT_GUIDE.md  Dockerfile.huggingface  Dockerfile.koyeb  cloudflare-pages.toml  edge_autodeploy.py  hf_entrypoint.sh
docs/: 1000_WAYS_TO_IMPROVE.md  PROJECT.md  QUBES_WHONIX_ARCH.md  TAILS_OS_GUIDE.md  email_deliverability_guide.md  service_credential_mapping.md  zero_cost_hosting.md
extension/: index.html  manifest.json  package-lock.json  package.json  rules.json  vite.config.ts
frontend/: jest.config.js  next.config.ts  package-lock.json  package.json
frontend-vue/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
infra/: Caddyfile  init.sql  nginx.conf
infrastructure/: Dockerfile.swarm  cloudflare_keepalive.js  cloudflare_queue_worker.js  deploy_eu_cloud.sh  docker-compose.production.yml  huggingface_space_app.py
k8s/: redis-deployment.yaml  swarm-deployment.yaml
kronos_exports/: premium_b2b_hiring_leads.csv
locales/: messages.pot
mobile/: App.tsx  package-lock.json  package.json
newsletters/: newsletter_20260625.html
olympus_webhook/: package.json  schema.sql  wrangler.toml
payments/: __init__.py  gateway.py  nowpayments.py
plans/: fix-c1-c4-architectural-plan.md  polish-before-launch.md
product-hunt-launch/: launch_kit.json
proxy/: Dockerfile  proxy_app.py
proxy_test_results/: FINAL_REPORT.txt  (+3 more)
(+2261 files in other folders)
