[project]
name = "jobhunt-pro"
version = "3.0.0"
description = "Enterprise AI-Powered Job Application Automation Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["jobs", "ai", "automation", "fastapi", "celery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://jobhuntpro.render.com"
Repository = "https://github.com/sam-salameh/jobhunt-pro"
"Bug Tracker" = "https://github.com/sam-salameh/jobhunt-pro/issues"

# ── Ruff Linter & Formatter ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["archive", "scripts/oneoff", ".venv2", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends pattern)
    "SIM117", # use single with statement (not always cleaner)
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "core", "web", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Mypy Type Checker ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
exclude = ["archive/", "scripts/oneoff/", ".venv2/"]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend", "core"]
omit = ["*/tests/*", "*/archive/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
