[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.coverage.run]
source = ["web", "core", "backend"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.poetry]
name = "jobhunt-pro"
version = "0.1.0"
description = "JobHunt Pro Enterprise SaaS Engine"
authors = ["Sam Salameh <samsalameh.cv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.0"
